fixed horizontal scroll, but now i'm able to scroll vertically while on menu

--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ body > div {
   position: relative;
 }
 
+.scroll-toggle {
+  overflow-y: hidden;
+}
+
 /*#region Nav*/
 
 nav {
